--- a/package.json
+++ b/package.json
@@ -7,6 +7,16 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
+  "devDependencies": {
+    "husky": "^2.3.0",
+    "prettier": "1.17.1",
+    "pretty-quick": "^1.10.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
