--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.15.1",
     "eslint-plugin-standard": "^4.0.1",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
