--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-scripts": "3.2.0"
   },
   "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "husky": "^2.3.0",
     "prettier": "1.17.1",
     "pretty-quick": "^1.10.0"
