--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "react-transition-group": "^4.3.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
