--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.2.0",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
