--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-transition-group": "^4.2.3",
     "antd": "^3.25.2",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
@@ -11,9 +12,10 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
-    "react-transition-group": "^4.3.0",
+    "react-transition-group": "^2.9.0",
     "redux": "^4.0.4",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
