--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-native-uuid": "^1.4.9",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "react-transition-group": "^4.3.0",
