Add simple server

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-2019-11-14",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "antd": "^3.25.2",
     "classnames": "^2.2.6",
@@ -17,6 +18,7 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "concurrently": "^5.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "husky": "^2.3.0",
@@ -30,7 +32,8 @@
     }
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"npm run api\"",
+    "api": "node simple_api/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
