--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.2.0",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "uuid": "^3.3.3"
   },
