--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.6",
     "immer": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
+    "immutable-js": "^0.3.1-6",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -18,6 +19,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "thunk": "^0.0.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
