--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "antd": "^3.25.2",
+    "antd": "^3.26.2",
     "classnames": "^2.2.6",
-    "immer": "^5.0.0",
+    "express": "^4.17.1",
+    "immer": "^5.0.1",
     "immutable": "^4.0.0-rc.12",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-transition-group": "^4.3.0",
+    "react-transition-group": "^2.9.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
