--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "antd": "^3.25.2",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.6.1",
+    "history": "^4.10.1",
     "immer": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
     "normalize.css": "^8.0.1",
