--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.25.2",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.6.1",
+    "express": "^4.17.1",
     "history": "^4.10.1",
     "immer": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
@@ -17,7 +18,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-transition-group": "^4.3.0",
+    "react-transition-group": "^2.9.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
